# agentguard

./: .gitignore  LICENSE  README.md  pyproject.toml
agentguard/: __init__.py  context.py  core.py  exceptions.py  interceptor.py
agentguard/approvals/: manager.py  models.py
agentguard/audit/: logger.py  models.py
agentguard/budget/: models.py  tracker.py
agentguard/decisions/: engine.py  models.py
agentguard/loops/: detector.py  models.py
agentguard/policy/: engine.py  models.py
agentguard/storage/: database.py  schema.py
demos/: demo.py  demo_policy.yaml
docs/: ARCHITECTURE.md  EDS.md  ENGINEERING_NOTES.md
tests/unit/: test_approval_manager.py  test_audit_logger.py  test_budget_tracker.py  test_context.py  test_core.py  test_database.py  test_decision_engine.py  test_decision_engine_reload_race.py  test_interceptor.py  test_loop_detector.py  test_policy_engine.py  test_policy_models.py
