[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Runtime governance middleware for AI agents"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["agentguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]